# solar_system_sim

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
saves/: solar_system.save
src/: bodies.c  bodies.h  defines.h  includes.h  linked_list.c  linked_list.h  main.c  menu.c  menu.h  menu_render.c  options.h  physical.h  save.c  save.h  structs.h  util.c  util.h  viewport.c  viewport.h
src/engine/: bodies.c  bodies.h  physical.h  save.c  save.h  viewport.c  viewport.h
src/menu/: main_menu_scene.c  main_menu_scene.h  menu.c  menu.h  menu_nodes.c  menu_render.c  menu_scene.h  menu_text_edit.c  menu_text_edit.h  menu_util.c  menu_util.h
src/scene/: scene.c  scene.h
src/scenes/: load_menu_scene.c  load_menu_scene.h  main_menu_scene.c  main_menu_scene.h  scene.c  scene.h
src/scenes/load_menu/: menu.c  menu.h  scene.c  scene.h
src/scenes/main_menu/: menu.c  menu.h  scene.c
src/scenes/solar_system/: menu.c  menu.h  scene.c  scene.h
src/utils/: linked_list.c  linked_list.h  util.c  util.h
